# gz-px4-custom

./: .gitignore  README.md  heads up - this is a forked repo.txt  install.sh  red_block.sdf
barge_controller/barge_controller/: test.cpp
custom_models/arucotag_0/: model.sdf
custom_models/arucotag_19/: model.sdf
custom_models/arucotag_59/: model.sdf
custom_models/arucotag_staged/: model.sdf
custom_models/barge/: model.sdf
custom_models/mono_cam_custom/: model.config  model.sdf
custom_models/pohang_barge/: default.sdf  model.sdf
custom_models/pohang_barge_old/: model.sdf
custom_models/pohang_canal_19/: model.config  model.sdf  model_backup.sdf
custom_models/pohang_canal_19/textures/: pohang_canal_19_height_map.tif
custom_models/pohang_canal_19_large/: backup.sdf  model.config  model.sdf  pohang_19_large.sdf
custom_models/pohang_canal_19_large/textures/: pohang_19_large_height_map.tif
custom_models/points/: model.config  model.sdf
custom_models/x500_custom/: model.sdf
custom_worlds/: aruco_barge.sdf  aruco_mocap.sdf  pohang.sdf  pohang_canal.sdf  pohang_canal_large.sdf
gz_plugins/: ReadMe.md
gz_plugins/barge_controller/: BargeController.cpp  BargeController.hpp  CMakeLists.txt  README.md
models/barge/: model.sdf
models/barge_actuated/: model.sdf
models/barge_old/: cut_content.txt  model.config
models/elevator/: elevator.sdf
models/mono_cam/: model.sdf
models/x500_base/: model.sdf
models/x500_custom/: model.sdf
ros2_ws/src/pohang_barge/: package.xml  (+2 more)
worlds/: aruco_mocap.sdf  aruco_mod.sdf  aruco_platform.sdf  bargeworld.sdf
(+8 files in other folders)
